[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/ButtonSFX.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/Options/ChangeVolume/VolumeSliderMute.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/VolumeIcon.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Themes/BixTheme/Button.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 42, 42 )
margin_left = 18.0
margin_right = 18.0
margin_top = 21.0
margin_bottom = 18.0

[node name="VolumeSliderMute" type="HBoxContainer" groups=[
"save",
]]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="."]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 35.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/separation = 12

[node name="BusLabel" type="Label" parent="H"]
margin_top = 8.0
margin_right = 44.0
margin_bottom = 22.0
size_flags_horizontal = 8
text = "Master"

[node name="Mute" type="Button" parent="H"]
margin_left = 56.0
margin_right = 95.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
icon = ExtResource( 3 )
script = ExtResource( 1 )

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 99.0
margin_top = 12.0
margin_right = 199.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.001
__meta__ = {
"_editor_description_": ""
}

[connection signal="toggled" from="H/Mute" to="." method="_on_Mute_toggled"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
